--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
         <title>Testing project!</title>
+        <link rel="stylesheet" href="style.css">
     </head>
-    <body>
+    <body id="body">
         <h1 style="color: mediumpurple; font-family: cursive;">Welcome to my website!</h1>
         <p style="color: rgb(48, 48, 48); font-family: cursive;">Hope you like!</p>
-        <br>
         <div style="font-family: cursive;">
         <ul>Text types
             <li><b>Bold</b></li>
@@ -16,22 +16,25 @@
             <li><u>Underline</u></li>
             <li><s>Understrock</s></li>
         </ul>
-        <br><ol><b>Fruits</b><br>
-            <il>Apple</il><br>
-            <il>Grape</il><br>
-            <il>Banana</il><br>
-            <il>Strawberry</il>
+        <br><ol>
+            <b>Fruits</b>
+            <li>Apple</li>
+            <li>Grape</li>
+            <li>Banana</li>
+            <li>Strawberry</li>
         </ol>
         </div>
         <div style="font-family: cursive; color:rgb(48, 48, 48) ;">
-        <img src="C:\Users\Cliente\Downloads\pink-tea.jpeg" alt="pink tea with flowers" width="100" height="100">
-        <img src="C:\Users\Cliente\Downloads\TOMBOY.jpeg" alt="heart-shaped cake with what the hell written on top" width="100" height="100">
+            <h3 style="color: lightpink;">Cool Series</h3>
+        <img src="https://assets.pinterest.com/ext/embed.html?id=1087056428786341993" height="620" width="345">
+        <img src="https://assets.pinterest.com/ext/embed.html?id=1087056428786341979" height="620" width="345">
         <br><br><a href="https://papago.naver.com/" style="color: cornflowerblue;">바바고</a><br>
         <br><form>
             <label for="name">Name:</label>
             <input type="text" id="name"><br>
             <label for="email">Email:</label>
-            <input type="email" id="email"><br>
+            <input type="email" id="email"><br
+            >
             <label for="password">Password:</label>
             <input type="password" id="password"><br>
             <label for="menssage">Menssage:</label>
@@ -39,19 +42,27 @@
             <input type="submit" value="Send">
         </form>
         </div>
-        <div><br>
+        <div class="table"><br>
             <table>
                 <tr>
-                    <th>Group Name</th>
-                    <th>Year of Debut</th>
+                    <th><i>Group Name</i></th>
+                    <th><i>Year of Debut</i></th>
                 </tr>
                 <tr>
-                    <td>NewJeans!</td>
-                    <td>2022</td>
+                    <td><i>NewJeans!</i></td>
+                    <td><i>2022</i></td>
                 </tr>
                 <tr>
-                    <td>Stray Kids!</td>
-                    <td>2017</td>
+                    <td><i>Stray Kids!</i></td>
+                    <td><i>2018</i></td>
+                </tr>
+                <tr>
+                    <td><i>Kiss of Life!</i></td>
+                    <td><i>2023</i></td>
+                </tr>
+                <tr>
+                    <td><i>(G)-Idle!</i></td>
+                    <td><i>2018</i></td>
                 </tr>
             </table>
         </div>
